--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,18 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+    /* сохраните этот селектор в приведённом виде.
+      Так стили написанные ниже будут иметь больший вес,
+      чем стили в медиазапросе предпочтений пользователя
+    */
+    --bg-color: #000028;
+    --title-color: #db00ff;
+    --text-color: #f1b2ce;
+    --title-text-color: #000028;
+    --title-accent-color: #ff0070;
+    --accent-color: #ff0070;
+    --rec: "rec";
+    --bulb: block;
+    --bg-cover: url(../images/cover-image-dark.png);
+    --bt-color: #ff0070;
+    --bt-color-shadow: rgba(255, 0, 112, 0.4);
+    --bt-color-active: #ff0070;
 }
