--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,8 +1,4 @@
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-      Так стили написанные ниже будут иметь больший вес,
-      чем стили в медиазапросе предпочтений пользователя
-    */
   --bg-color: #000028;
   --title-color: #db00ff;
   --text-color: #f1b2ce;
@@ -12,7 +8,7 @@
   --rec: "rec";
   --bulb: block;
   --bg-cover: url(../images/cover-image-dark.png);
-  --bt-color: #ff0070;
-  --bt-color-shadow: rgba(255, 0, 112, 0.4);
-  --bt-color-active: #ff0070;
+  --button-color: #ff0070;
+  --button-color-shadow: rgba(255, 0, 112, 0.4);
+  --button-color-active: #ff0070;
 }
