--- a/styles/light.css
+++ b/styles/light.css
@@ -1,14 +1,4 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-      Так стили написанные ниже будут иметь больший вес,
-      чем стили в медиазапросе предпочтений пользователя
-    */
   --bg-color: #fff1f7;
   --title-color: #ffc2e6;
   --text-color: #353430;
@@ -18,9 +8,9 @@
   --rec: "";
   --bulb: none;
   --bg-cover: url(../images/cover-image-light.png);
-  --bt-color: #353430;
-  --bt-color-shadow: rgba(50, 49, 45, 0.4);
-  --bt-color-active: #353430;
+  --button-color: #353430;
+  --button-color-shadow: rgba(50, 49, 45, 0.4);
+  --button-color-active: #353430;
 }
 
 @media (prefers-color-scheme: light) {
@@ -34,8 +24,8 @@
     --rec: "";
     --bulb: none;
     --bg-cover: url(../images/cover-image-light.png);
-    --bt-color: #353430;
-    --bt-color-shadow: rgba(50, 49, 45, 0.4);
-    --bt-color-active: #353430;
+    --button-color: #353430;
+    --button-color-shadow: rgba(50, 49, 45, 0.4);
+    --button-color-active: #353430;
   }
 }
