--- a/styles/style.css
+++ b/styles/style.css
@@ -12,19 +12,18 @@
 }
 
 .header {
-  padding: 10px;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 63px 165px 247px 148px;
-  justify-content: space-between;
-  min-height: 100vh;
+  grid-template-rows: 1fr min-content 1fr;
+  min-height: 668px;
+  height: 100vh;
+  padding: 10px;
 }
 
 .cover {
   object-fit: cover;
 }
 
-/*лампочка*/
 .header__bulb {
   display: flex;
   gap: 3px;
@@ -39,7 +38,6 @@
   margin-right: 28px;
 }
 
-/*noinspection CssInvalidFunction*/
 .header__bulb::after {
   content: "";
   position: absolute;
@@ -49,7 +47,7 @@
   border-radius: 50%;
   flex-shrink: 0;
   background: #ff0070;
-  box-shadow: 0 0 4px 2px var(--accent-color, #ff0070);
+  box-shadow: 0 0 4px 2px var(--accent-color);
   margin: 8px 8px 0 10px;
   display: var(--bulb);
 }
@@ -68,7 +66,7 @@
 .header__theme-menu-button {
   background-color: inherit;
   text-transform: lowercase;
-  color: var(--bt-color, #ff0070);
+  color: var(--button-color, #ff0070);
   border: 0;
   width: 70px;
   height: 26px;
@@ -76,26 +74,22 @@
 }
 
 .header__theme-menu-button:hover {
-  border: 1px solid var(--bt-color-shadow, rgba(255, 0, 112, 0.4));
+  border: 1px solid var(--button-color-shadow, rgba(255, 0, 112, 0.4));
   margin: 0;
   transition: width 300ms, background-color 0.5s;
 }
 
 .header__theme-menu-button:focus {
-  border: none;
-  border-bottom: 1px solid var(--bt-color, #ff0070);
-  margin: 0;
+  outline: none;
 }
 
 .header__theme-menu-button:focus-visible {
-  border: none;
-  border-bottom: 1px solid rgb(255, 242, 0);
-  margin: 0;
+  border-bottom: 1px solid var(--button-color, #ff0070);
 }
 
 .header__theme-menu-button_active {
   pointer-events: none;
-  border: 1px solid var(--bt-color-active, rgba(255, 0, 112));
+  border: 1px solid var(--button-color-active, rgba(255, 0, 112));
 }
 
 .header__title {
@@ -107,8 +101,8 @@
 
 .decorated-zone::before {
   content: "";
-  border-right: 1px solid var(--bt-color, #ff0070);
-  border-top: 1px solid var(--bt-color, #ff0070);
+  border-right: 1px solid var(--button-color, #ff0070);
+  border-top: 1px solid var(--button-color, #ff0070);
   width: 25px;
   height: 25px;
   justify-self: end;
@@ -120,8 +114,8 @@
 
 .decorated-zone::after {
   content: "";
-  border-left: 1px solid var(--bt-color, #ff0070);
-  border-bottom: 1px solid var(--bt-color, #ff0070);
+  border-left: 1px solid var(--button-color, #ff0070);
+  border-bottom: 1px solid var(--button-color, #ff0070);
   width: 25px;
   height: 25px;
   margin-top: auto;
@@ -144,7 +138,7 @@
   line-height: 1.3;
 }
 
-h2 + .title-decor,
+.content__block-title + .title-decor,
 .content__paragraph {
   margin-bottom: 20px;
 }
@@ -164,7 +158,6 @@ h2 + .title-decor,
 
 .content {
   padding: 0 10px;
-  background-color: var(--bg-color, #000028);
 }
 
 .content__block-other {
@@ -181,14 +174,18 @@ h2 + .title-decor,
 }
 
 .text-link:focus {
-  border: 1px solid var(--text-color, #f1b2ce);
+  outline: none;
+}
+
+.text-link:focus-visible {
+  outline: 1px solid var(--text-color, #f1b2ce);
 }
 
 .content__block-pictures {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding-block-end: 40px;
+  margin-block-end: 40px;
 }
 
 .content__block-pictures > .title-decor {
@@ -207,10 +204,9 @@ h2 + .title-decor,
   min-height: 668px;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr auto 1fr;
-  block-size: 100vh;
+  grid-template-rows: 1fr min-content 1fr;
+  height: 100vh;
   padding: 2.5%;
-  background-color: var(--bg-color, #000028);
 }
 
 .footer__title {
@@ -239,6 +235,7 @@ h2 + .title-decor,
 @media (width >= 768px) {
   .content {
     padding: 0 20px;
+    margin-block-end: 60px;
   }
   .content__paragraph-title {
     margin-top: 0;
@@ -342,9 +339,10 @@ h2 + .title-decor,
     flex-direction: row;
   }
   .content__block-other {
-    grid-gap: 20px;
-    grid-template-columns: repeat(3, minmax(315px, max-content));
+    display: grid;
+    gap: 20px;
   }
+
   .content__block-title {
     margin-bottom: 0;
   }
@@ -352,12 +350,20 @@ h2 + .title-decor,
     inline-size: 315px;
     grid-row: auto;
   }
+
+  .content__block-why {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
   .content__block-other > .content__block-article {
     grid-column-start: auto;
     grid-row-start: 2;
   }
   .content__block-article {
     padding-left: 7px;
+    grid-template-columns: repeat(3, 1fr);
   }
   .content__block-title + .title-decor {
     margin-left: 7px;
