--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,50 +1,13 @@
 :root {
-  --big-title-text-color: #db00ff;
-  --accent-color: #ff0070;
-  --decor-color: var(--accent-color);
-  --shadow-color: var(--accent-color);
+  --bg-color: #000028;
+  --title-color: #db00ff;
   --text-color: #f1b2ce;
-  --text-title-decor-color: var(--bg-color);
-  --hover-border-color: rgba(255, 0, 112, 0.4);
-  --display-rec-decor: block;
-  --bg-image: url("../images/cover-image-dark.png");
-  --menu-margin-top: 1.5vh;
-  --title-margin-top: 5.39vh;
-  --header-description-margin-top: 3.89vh;
-  --decorated-zone-padding: 10px;
-  --rec-decor-top: 10px;
-  --rec-decor-right: 20px;
-  --main-row-gap: 50px;
-  --header-column-width: 30.73vw;
-  --decorated-zone-height: 100vh;
-  --main-font-size: 18px;
-  --font-weight-bold: 700;
-  --font-weight-normal: 400;
-  --decor-size: 25px;
-  --standard-gap: 10px;
-  --big-gap: 20px;
-  --font: "IBM Plex mono";
-  --big-line-height: 130%;
-  --mid-line-height: 100%;
-  --small-line-height: 82.5%;
-}
-
-@media (width >= 768px) {
-  :root {
-    --menu-margin-top: 0.88vh;
-    --title-margin-top: 3.42vh;
-    --header-description-margin-top: 2.44vh;
-    --decorated-zone-padding: 20px;
-    --rec-decor-top: 20px;
-    --rec-decor-right: 30px;
-    --main-row-gap: 80px;
-  }
-}
-
-@media (width >= 1024px) or (height < 668px) {
-  :root {
-    --menu-margin-top: 0;
-    --title-margin-top: 24.09vh;
-    --header-description-margin-top: 3.26vh;
-  }
+  --accent-color: #ff0070;
+  --rec: "rec";
+  --bulb: block;
+  --bg-cover: url(../images/cover-image-dark.png);
+  --button-color: #ff0070;
+  --button-color-shadow: rgba(255, 0, 112, 0.4);
+  --button-color-active: #ff0070;
+  --font: "IBM Plex Mono", "monospace";
 }
